Setting up the moniter

--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -26,5 +26,14 @@ android {
     }
     namespace = 'com.qualcomm.ftcrobotcontroller'
 }
+repositories {
+    maven {
+        url = 'https://maven.brott.dev/'
+    }
+}
+dependencies {
+    implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
+
+}
 
 apply from: '../build.dependencies.gradle'
