--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -16,6 +16,19 @@ apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 
 android {
+
+    defaultConfig {
+        externalNativeBuild {
+            cmake {
+                cppFlags ''
+            }
+        }
+    }
+    externalNativeBuild {
+        cmake {
+            path file('src/main/cpp/CMakeLists.txt')
+        }
+    }
     namespace = 'org.firstinspires.ftc.teamcode'
 
     packagingOptions {
