--- a/build.common.gradle
+++ b/build.common.gradle
@@ -21,6 +21,11 @@ apply plugin: 'com.android.application'
 
 android {
 
+    externalNativeBuild {
+        cmake {
+            version '3.31.1' // was 3.22.1
+        }
+    }
     compileSdkVersion 30
 
     signingConfigs {
@@ -109,7 +114,7 @@ android {
     packagingOptions {
         pickFirst '**/*.so'
     }
-    ndkVersion '21.3.6528147'
+    ndkVersion '27.0.12077973'
 }
 
 repositories {
