--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -1,3 +1,5 @@
+import java.text.SimpleDateFormat
+
 //
 // build.gradle in TeamCode
 //
@@ -16,26 +18,23 @@ apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 
 android {
-
-    defaultConfig {
-        externalNativeBuild {
-            cmake {
-                cppFlags ''
-            }
-        }
-    }
-    externalNativeBuild {
-        cmake {
-            path file('src/main/cpp/CMakeLists.txt')
-        }
-    }
     namespace = 'org.firstinspires.ftc.teamcode'
+
+    buildFeatures {
+        buildConfig  true
+    }
 
     packagingOptions {
         jniLibs.useLegacyPackaging true
     }
-}
 
+    defaultConfig{
+        minSdkVersion 24
+        //noinspection ExpiredTargetSdkVersion
+        targetSdkVersion 28
+        buildConfigField "String", "APP_BUILD_TIME", '"' + (new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ", Locale.ROOT).format(new Date())) + '"'
+    }
+}
 repositories {
     maven {
         url = 'https://maven.brott.dev/'
@@ -44,9 +43,9 @@ repositories {
 
 dependencies {
     implementation project(':FtcRobotController')
-
-    implementation "com.acmerobotics.roadrunner:ftc:0.1.14"
-    implementation "com.acmerobotics.roadrunner:core:1.0.0"
-    implementation "com.acmerobotics.roadrunner:actions:1.0.0"
+    annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.20'
 }
