--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
-
+    implementation 'org.ftclib.ftclib:core:2.1.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.20'
 }
